Added template method for MenuCli Improved threading Fixed some emojy in print